# src/Controllers/System/SystemRouter.php
@@ -9,6 +9,7 @@ class SystemRouter
 
     public function mapRoutes(RouteCollectionInterface $router): void
     {
+        $router->get('/system/health', GetHealthController::class);
         $router->map('GET', '/system/integrations', GetIntegrationsController::class);
         $router->map('POST', '/system/data', ImportDataController::class);
         $router->map('GET', '/system/data', ExportDataController::class);
